--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.database=SOA
+spring.data.mongodb.uri=mongodb+srv://64070108:64070108@orderservice.aiebaia.mongodb.net
 spring.data.mongodb.port=27017
-#spring.data.redis.host=localhost
-#spring.cache.type=redis
-#spring.data.redis.port=6739
+spring.data.mongodb.database=OrderService
